fix: fix bug with markup on Iphone 6,7,8

--- a/src/components/Registration/index.scss
+++ b/src/components/Registration/index.scss
@@ -91,7 +91,7 @@
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 415px) {
   .registration-form {
     width: 80%;
     padding: 5% 5% 5% 5%;
